# service-audio-feedback

./: .env.example  Dockerfile  README.md  app.py  pyproject.toml  start.py
configs/: __init__.py  database.py  graylog.py  services.py
database/: models.py
routers/: __init__.py  feedback.py
routers/utils/: evaluator.py  texts.py
schemas/: __init__.py  examples.py  feedback.py
